# SmartRoofAI

./: .replit  ai_models.py  ai_roof_calculator.py  ai_routes.py  app.py  database.py  db_models.py  main.py  ml_models.py  models.py  pyproject.toml  replit.md  routes.py  routes_old.py  smartroof.db  utils.py
static/css/: style.css
static/js/: ai_calculator.js  chat.js  main.js  roof_calculator.js
templates/: ai_calculator.html  base.html  cart.html  chat.html  checkout.html  index.html  login.html  product_detail.html  products.html  profile.html  register.html
templates/admin/: dashboard.html  orders.html  product_form.html  products.html  reports.html  users.html
templates/payment/: mtn_payment.html
